ipc/ipdl/test/ipdl/error/undeclProtocol.ipdl
protocol undeclProtocol {
    manages undeclared;

child:
    async undeclared();
};
